# faktaiklim-webhook

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  cog.toml  docker-compose.yml  pyproject.toml  requirements.txt  test.py
app/: bot.py  config.py  database.py  receive.py  topic.py
app/resources/: fact.html  hoax.html  unknown.html  welcome.html
scripts/: get_webhook.sh  set_webhook.sh
