[project]
name = "giz-telegram-webhook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bottle==0.13.2",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "idna==3.10",
    "pika==1.3.2",
    "pydantic-settings>=2.6.1",
    "requests==2.31.0",
    "urllib3==2.0.7",
    "waitress==2.1.2",
]

[tool.uv]
dev-dependencies = [
    "pudb>=2024.1.3",
]
